--- a/src/main/web/chess/public/index.html
+++ b/src/main/web/chess/public/index.html
@@ -25,7 +25,9 @@
     -->
     <title>React App</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/variables.css">
+    <link rel="stylesheet" type="text/css" href="css/root.css">
+    <link rel="stylesheet" type="text/css" href="css/chessboard.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
