refactored file structure to separate components; added menu component

--- a/src/main/web/chess/public/index.html
+++ b/src/main/web/chess/public/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" type="text/css" href="css/variables.css">
     <link rel="stylesheet" type="text/css" href="css/root.css">
     <link rel="stylesheet" type="text/css" href="css/chessboard.css">
+    <link rel="stylesheet" type="text/css" href="css/menu.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -38,8 +39,6 @@
         this is the menu
       </div>
     </div>
-
-    
 
   </body>
 </html>
