refactored to use one root component

--- a/src/main/web/chess/public/index.html
+++ b/src/main/web/chess/public/index.html
@@ -33,12 +33,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="root">
-      <div id="board-root"></div>
-      <div id="menu-root">
-        this is the menu
-      </div>
-    </div>
+    <div id="root"></div>
 
   </body>
 </html>
