installed react-draggable package; added logicboard classes

--- a/src/main/web/public/index.html
+++ b/src/main/web/public/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="css/root.css">
     <link rel="stylesheet" type="text/css" href="css/chessboard.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
+    <link rel="stylesheet" type="text/css" href="css/logicboard.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
