refactored into multiple pages; began work on front page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,11 +25,11 @@
     -->
     <title>Linear Chess</title>
 
-    <link rel="stylesheet" type="text/css" href="css/variables.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/variables.css">
     <link rel="stylesheet" type="text/css" href="css/root.css">
     <link rel="stylesheet" type="text/css" href="css/chessboard.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
-    <link rel="stylesheet" type="text/css" href="css/logicboard.css">
+    <link rel="stylesheet" type="text/css" href="css/logicboard.css"> -->
   </head>
   <body>
     
