--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>Linear Chess</title>
 
-    <!-- <link rel="stylesheet" type="text/css" href="css/variables.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/theme.css">
     <link rel="stylesheet" type="text/css" href="css/root.css">
     <link rel="stylesheet" type="text/css" href="css/chessboard.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
